clang/test/BSC/Negative/Coroutine/Other/Definition/async_static_declaration/async_static_declaration.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../../lib/Headers/bsc_include -verify %s 

#include "../../../async-func-read-opposite.hbs"

static _Async int f(int start); // expected-error {{_Async function does not support static declaration}} 

_Async int test() {
  return 42;
}

_Async int g() {
  int tmp = _Await f(3);
  return 42;
}

static _Async int f(int start) {
  start = 3;
  int a = _Await test();
  return a + start;
}

int main() {
  return 0;
}